Fix dropdown overflow.

--- a/xadmin/static/xadmin/css/xadmin.plugin.language.css
+++ b/xadmin/static/xadmin/css/xadmin.plugin.language.css
@@ -1,3 +1,4 @@
-ul.dropdown-menu {
-    overflow: auto;
+.dropdown-menu {
+    max-height: 600px;
+    overflow-y: auto;
 }
